# senza

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  senza.release.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GLYPH.md  VISION.md  release-notes-v0.1.0-coda-github.md  release-notes-v1.0.0-vivo-github.md  release-notes-v1.1.0-legato-github.md  release-notes-v1.2.0-dolce-github.md
electron/: artist-avatars.cjs  bpm-analyzer.cjs  covers.cjs  glyph-db.cjs  glyph-features.cjs  glyph-import-meta.cjs  glyph-import.cjs  glyph-learn-rules-db.cjs  glyph-learn-rules.cjs  glyph-learn.cjs  glyph-log-db.cjs  glyph-mi.cjs  glyph-online.cjs  glyph-onnx.cjs  import.cjs  library-backup.cjs  library-tree.cjs  lyrics.cjs  main.cjs  metadata.cjs  playlists.cjs  preload.cjs  state-validator.cjs  tags.cjs  watched-folder.cjs
electron/lib/: path-guards.cjs
electron/scripts/: bpm_librosa.py
glyph-mi/: README.ru.md
glyph-mi/glyph_mi/: __init__.py  analyze.py  knowledge.py  rules.py  vault.py
glyph-mi/js/: duplicates.js  index.js  (+2 more)
glyph-mi/python/: pyproject.toml
glyph-mi/python/glyph_mi/: cli.py  confidence.py  knowledge.py
scripts/: build-icons.mjs  glyph-download-tools.mjs  glyph-import-export.mjs  init-glyph-lab.mjs  push-glyph-mirror.mjs  sync-glyph-mirror.mjs  sync-version.mjs
src/: index.html
tests/: critical-paths.test.js  flow.test.js  path-guards.test.js  search.test.js  smart-playlists.test.js  state-validator.test.js
(+84 files in other folders)
